hphp/hack/test/typecheck/variadics/ellipsis_class_method.php.exp
File "ellipsis_class_method.php", line 6, characters 19-22:
Variadic function arguments require a name and type in strict mode, e.g. `int ...$args`. (Typing[4223])
